fix: JWT Auth for some endpoints and etc.
